@@ -1,0 +1,35 @@
+/*
+ * dfsch - dfox's quick and dirty scheme implementation
+ *   Object system
+ * Copyright (C) 2007 Ales Hakl
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ */
+
+#include "dfsch/object.h"
+
+#include <dfsch/hash.h>
+
+typedef struct instance_t {
+  dfsch_type_t* class;
+  dfsch_object_t* inst_vars;  // Hashmap
+} instance_t;
+
+
+typedef struct class_t {
+  dfsch_type_t type;
+  class_t* superclass;
+} class_t;
