@@ -1,3 +1,7 @@
+2007-01-16  Ales Hakl  <ales at hakl dot net>
+
+	* dfsch/dfsch.h (dfsch_type_t): more or less first-class types
+
 2007-01-15  Ales Hakl  <ales at hakl dot net>
 
 	* src/types.h: renamed from object.h
